Fix text alignment and font weight

--- a/css/styles.css
+++ b/css/styles.css
@@ -10153,10 +10153,6 @@ header.masthead h1 {
   text-align: center;
 }
 
-.overview p {
-  text-align: center;
-}
-
 header.masthead  {
   padding-bottom: 0;
 }
@@ -10205,10 +10201,6 @@ header.masthead  {
   }
 
   .overview h3 {
-    text-align: left;
-  }
-
-  .overview p {
     text-align: left;
   }
 }
